Fix Mockito and JVM args for Java 21