@@ -1,38 +1,44 @@
 plugins {
-	java
-	id("org.springframework.boot") version "3.4.6"
-	id("io.spring.dependency-management") version "1.1.7"
+    java
+    id("org.springframework.boot") version "3.4.6"
+    id("io.spring.dependency-management") version "1.1.7"
 }
 
 group = "live.nxasenpai"
 version = "0.0.1-SNAPSHOT"
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(25)
-	}
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	implementation("org.springframework.boot:spring-boot-starter-web")
-	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-	implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
-	implementation("org.springframework.boot:spring-boot-starter-validation")
-	implementation("com.mysql:mysql-connector-j")
-	implementation("com.itextpdf:itext-core:8.0.5")
-	implementation("com.google.zxing:core:3.5.3")
-	implementation("com.google.zxing:javase:3.5.3")
-	runtimeOnly("com.h2database:h2")
-	testImplementation("org.xerial:sqlite-jdbc:3.46.1.0")
-	testImplementation("org.hibernate.orm:hibernate-community-dialects")
-	testImplementation("org.springframework.boot:spring-boot-starter-test")
-	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+    implementation("org.springframework.boot:spring-boot-starter-validation")
+    implementation("com.mysql:mysql-connector-j")
+    implementation("com.itextpdf:itext-core:8.0.5")
+    implementation("com.google.zxing:core:3.5.3")
+    implementation("com.google.zxing:javase:3.5.3")
+    runtimeOnly("com.h2database:h2")
+    testImplementation("org.xerial:sqlite-jdbc:3.46.1.0")
+    testImplementation("org.hibernate.orm:hibernate-community-dialects")
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation("org.mockito:mockito-core:5.14.2")
+    testImplementation("org.mockito:mockito-junit-jupiter:5.14.2")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 tasks.withType<Test> {
-	useJUnitPlatform()
+    useJUnitPlatform()
+    jvmArgs(
+        "--enable-native-access=ALL-UNNAMED",
+        "-XX:+EnableDynamicAgentLoading"
+    )
 }
